// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginPage /> template Should be render 1`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    />
    <Logo />
    <form
      className="loginContainer__loginForm"
      method="POST"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        aria-label="login"
        name="email"
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        aria-label="password"
        name="password"
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        aria-label="login-button"
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        aria-label="recovory-link"
        className="recovory-link"
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;

exports[`<LoginPage /> template Should be render 2`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    />
    <Logo />
    <form
      className="loginContainer__loginForm"
      method="POST"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        aria-label="login"
        name="email"
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        aria-label="password"
        name="password"
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        aria-label="login-button"
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        aria-label="recovory-link"
        className="recovory-link"
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;

exports[`<LoginPage /> template Should be render 3`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    />
    <Logo />
    <form
      className="loginContainer__loginForm"
      method="POST"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        aria-label="login"
        name="email"
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        aria-label="password"
        name="password"
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        aria-label="login-button"
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={true}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        aria-label="recovory-link"
        className="recovory-link"
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;

exports[`<LoginPage /> template Should be render 4`] = `
<div
  className="loginPage"
>
  <div
    className="loginPage__loginContainer"
  >
    <h1
      className="loginContainer__title"
    />
    <Logo />
    <form
      className="loginContainer__loginForm"
      method="POST"
      name="loginForm"
    >
      <div
        className="notificationWrapper"
      />
      <Input
        aria-label="login"
        name="email"
        placeholder="login"
        size="large"
        type="text"
      />
      <Input
        aria-label="password"
        name="password"
        placeholder="password"
        size="large"
        type="password"
      />
      <Button
        aria-label="login-button"
        block={false}
        className="enterSystem"
        ghost={false}
        htmlType="button"
        loading={true}
        onClick={[Function]}
        type="primary"
      >
        Войти
      </Button>
      <ModalWindow
        mode="reg"
      />
      <NavLink
        aria-label="recovory-link"
        className="recovory-link"
        to="/recovory"
      >
        Восстановление доступа
      </NavLink>
    </form>
  </div>
</div>
`;
